plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'org.app'
version = '0.0.1-SNAPSHOT'
description = 'auth-template-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Dotenv
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
    implementation "me.paulschwarz:spring-dotenv:3.0.0"

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Model Mapper
    implementation 'org.modelmapper:modelmapper:3.2.4'

    // Database
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Flyway core + MySQL support
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Cloudinary
    implementation ('com.cloudinary:cloudinary-core:1.37.0')
    implementation ('com.cloudinary:cloudinary-http45:1.37.0') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    // Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
}

spotless {
    java {
        googleJavaFormat('1.30.0')
        removeUnusedImports()
        encoding 'UTF-8'
        trimTrailingWhitespace()
        endWithNewline()

        target 'src/**/*.java'
        targetExclude '**/build/**'
    }
}

tasks.withType(Test).configureEach {
    enabled = false
}